Adding a constraint to a bone of a proxy armature resets all bones' transformations. #43872

Closed
opened 2015-03-03 18:48:40 +01:00 by Cenek Strichel · 14 comments

System Information
W8.1 64b, GF 250

Blender Version
Blender 2.73a

Exact steps for others to reproduce the error

ref.blend
scene.blend

  1. Download my files and open Scene.blend
  2. Link circled bone to Cylinder with Contraint Child of
  3. Linked bones are reseted until you play animation
  4. Bones are reseted everytime you set something in added constraint

Maybe it is limitation, it is not serious, keyframe are ok, but it reset all if you dont have keyframe.

**System Information** W8.1 64b, GF 250 **Blender Version** Blender 2.73a **Exact steps for others to reproduce the error** [ref.blend](https://archive.blender.org/developer/F147056/ref.blend) [scene.blend](https://archive.blender.org/developer/F147057/scene.blend) 1) Download my files and open Scene.blend 2) Link circled bone to Cylinder with Contraint Child of 3) Linked bones are reseted until you play animation 4) Bones are reseted everytime you set something in added constraint Maybe it is limitation, it is not serious, keyframe are ok, but it reset all if you dont have keyframe.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cenda

Added subscriber: @Cenda
Bastien Montagne changed title from Constrain is reseting linked position to Adding a constraint to a bone of a proxy armature resets all bones' transformations. 2015-03-06 10:37:27 +01:00

Added subscribers: @JoshuaLeung, @ideasman42, @Sergey, @mont29

Added subscribers: @JoshuaLeung, @ideasman42, @Sergey, @mont29

Issue here is adding a constraint to a bone of a proxy armature (any constraint does the same).

Not even sure this should be allowed?

Issue here is adding a constraint to a bone of a proxy armature (any constraint does the same). Not even sure this should be allowed?

OK, so in your ref.blend file, all bones of the armature are in a protected layer. This implies you should not be able to edit them (like adding a constraint).

OK, so in your ref.blend file, all bones of the armature are in a protected layer. This implies you should not be able to edit them (like adding a constraint).

Grmlll… And yet, code explicitly allows adding constraints to locked bones… Have to dig this more.

Grmlll… And yet, code explicitly allows adding constraints to locked bones… Have to dig this more.
Member

@mont29: I think animators would beg to differ - Being able to do that is pretty much essential to being able to add constraints for grabbing/hanging on to props.

@mont29: I think animators would beg to differ - Being able to do that is pretty much essential to being able to add constraints for grabbing/hanging on to props.

@JoshuaLeung yep, realize that.

In fact, I think it boils down to an update issue (i.e., the fact that transformation is reset is expected behavior, but animation should be immediately re-evaluated then):

  • Adding a constraint forces re-evaluation of the whole pose.
  • For proxy bones on locked layers, this means reloading transformations from library (in BKE_pose_rebuild()).

What I do not know is how to force re-evaluation of animation afterwards - I tried to tag update OB_RECALC_ALL (which includes time) in this case, but no luck so far. :/

@JoshuaLeung yep, realize that. In fact, I think it boils down to an update issue (i.e., the fact that transformation is reset is expected behavior, but animation should be immediately re-evaluated then): * Adding a constraint forces re-evaluation of the whole pose. * For proxy bones on locked layers, this means reloading transformations from library (in `BKE_pose_rebuild()`). What I do not know is how to force re-evaluation of animation afterwards - I tried to tag update `OB_RECALC_ALL` (which includes time) in this case, but no luck so far. :/
Member

If you only want to force animation refresh, you can simply tag the relevant animdata->recalc with ADT_RECALC_ANIM and it will do that

If you only want to force animation refresh, you can simply tag the relevant animdata->recalc with ADT_RECALC_ANIM and it will do that
Bastien Montagne self-assigned this 2015-03-06 12:47:43 +01:00
Author

I also found in manual that I can not add constraint to Protected Layer, so I was surprised that I can :) But it is good for props. Also it will be fine if my pose will not reseted after added constraint, if I dont have keyframe yet.

I also found in manual that I can not add constraint to Protected Layer, so I was surprised that I can :) But it is good for props. Also it will be fine if my pose will not reseted after added constraint, if I dont have keyframe yet.

@Cenda: you should always key your transforms on locked proxy bones, many things in Blender will reset them to lib position otherwise (like undo/redo, etc.). This is not a bug, if you want complete freedom for your proxy bones then place them on a non-locked bone layer in your lib file.

@Cenda: you should always key your transforms on locked proxy bones, many things in Blender will reset them to lib position otherwise (like undo/redo, etc.). This is not a bug, if you want complete freedom for your proxy bones then place them on a non-locked bone layer in your lib file.

This issue was referenced by b21e0cccfa

This issue was referenced by b21e0cccfa29ab87c0f78a4c5ff05827a3efee7f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b21e0cccfa.

Closed by commit b21e0cccfa.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43872
No description provided.