Fix T43872: Adding a constraint to a bone of a proxy armature resets all bones' transformations.

Temp hack for until new depsgraph is here. Thanks the Joshua and Sergey for their help.